k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: discord-bot

spec:
  replicas: 1

  selector:
    matchLabels:
      app: discord-bot

  template:
    metadata:
      labels:
        app: discord-bot

    spec:
      containers:
        - name: discord-bot

          # CI/CD 部署時會用 kubectl set image 更新這個版本
          image: ken900809/discord-bot:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
