k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: discord-bot-service

spec:
  selector:
    app: discord-bot

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: NodePort
